fix(subscriptions): swagger docs
